samples/_failures_safe/1761509727_050be2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1de4c665.c: In function ‘main’:
./samples/SAFE/__tmp_1de4c665.c:180:34: error: expected ‘)’ at end of input
  180 |     if (len > 0 && input[len - 1]
      |        ~                         ^
      |                                  )
./samples/SAFE/__tmp_1de4c665.c:180:5: error: expected declaration or statement at end of input
  180 |     if (len > 0 && input[len - 1]
      |     ^~
